# omega

./: .gitignore  .swp  Makefile  Makefile.am  Makefile.config  README  README.md  aclocal.m4  config.status  configure  configure.ac
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
basic/include/basic/: debug.h  omega_error.h
basic/src/.deps/: libomega_a-ConstString.Po  libomega_a-Link.Po
code_gen/: CMakeLists.txt
code_gen/include/code_gen/: CG.h  CG_outputRepr.h  CG_stringBuilder.h  CG_suifBuilder.h  CG_suifRepr.h
code_gen/include/code_gen/parser/: myflex.h  parser.h
code_gen/src/: CG.cc  CG_stringBuilder.cc  CG_suifBuilder.cc  CG_utils.cc  code_gen.cc  codegen.cc
code_gen/src/.deps/: libcodegen_a-CG.Po  libcodegen_a-CG_stringBuilder.Po  libcodegen_a-CG_utils.Po  libcodegen_a-codegen.Po
code_gen/src/parser/: AST.cc  myflex.cc  parser.ll  parser.yy
examples/: gist.out  if_then.out
examples/c_code/: example.c  library_example.c
include/: config.h.in
omega/: INSTALL  Makefile.rules
omega/code_gen/src/: CG_suifRepr.cc  CG_utils.cc  codegen.cc
omega/examples/: code_gen.out  gist  hull.out  lu.out
omega/omega_calc/src/: parser.yy
omega/omega_lib/src/: closure.cc  hull_simple.cc  pres_cnstr.cc
omega_calc/src/: .parser.yy.swp  AST.cc  calc.cc  parser.cc  parser.ll  parser.yy
omega_calc/src/.deps/: oc-AST.Po  oc-myflex.Po
omega_lib/src/: RelBody.cc  Relations.cc  closure.cc  pres_beaut.cc  pres_dnf.cc  pres_gen.cc  reach.cc
(+46 files in other folders)
